plugins {
    id 'application'
    id 'com.github.johnrengelman.shadow' version '5.2.0'
}

mainClassName = 'ua.mani123.CBot'

version findProperty("version")

def jdaVersion = '5.0.0-beta.2'
def tomlVersion = '3.6.6'
def logbackVersion = '1.4.5'
def textVersion = '1.10.0'

sourceCompatibility = targetCompatibility = 17

repositories {
    mavenCentral()
    maven {
        url "https://m2.dv8tion.net/releases"
    }
    // maven { url = uri("https://m2.chew.pro/snapshots") } for jda-chewtils
}

dependencies {
    //implementation("pw.chew:jda-chewtils:2.0-SNAPSHOT") soon
    implementation("net.dv8tion:JDA:$jdaVersion") {
        exclude module: 'opus-java'
    }
    implementation("com.electronwill.night-config:toml:$tomlVersion")
    implementation("ch.qos.logback:logback-classic:$logbackVersion")
    implementation("org.apache.commons:commons-text:$textVersion")
}

compileJava.options.encoding = 'UTF-8'

tasks.register('buyThePlugins') {
    dependsOn subprojects.build

    doLast {
        println 'If you like the bot, please consider buying it!'
    }
}

shadowJar {
    finalizedBy('buyThePlugins')
    archiveFileName = findProperty("project-name") + "-v" + findProperty("version") + ".jar"
}

build {
    finalizedBy('buyThePlugins')
}